--- a/index.html
+++ b/index.html
@@ -3201,13 +3201,13 @@ window.addEventListener('scroll', () => {
         <div class="event-card" style="background: rgba(255,255,255,0.05); backdrop-filter: blur(10px); border-radius: 15px; padding: 20px; border: 1px solid rgba(255,255,255,0.1);">
           <div style="display: flex; gap: 15px;">
             <div style="background: #D4AF37; width: 60px; height: 60px; border-radius: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-              <span style="font-size: 20px; font-weight: bold; color: white;">15</span>
-              <span style="font-size: 12px; color: #b8c2d8;">JUN</span>
+              <span style="font-size: 20px; font-weight: bold; color: white;">4-5</span>
+              <span style="font-size: 12px; color: #b8c2d8;">OCT</span>
             </div>
             <div>
-              <h4 style="color: white; margin: 0 0 5px 0;">Digital Innovation Workshop</h4>
-              <p style="color: #b8c2d8; margin: 0; font-size: 14px;">2:00 PM - 5:00 PM</p>
-              <p style="color: #b8c2d8; margin: 5px 0 0 0; font-size: 14px;">Virtual Event</p>
+              <h4 style="color: white; margin: 0 0 5px 0;">NASA Space Apps Challenge</h4>
+              <p style="color: #b8c2d8; margin: 0; font-size: 14px;">8:00 AM - 15:00 PM</p>
+              <p style="color: #b8c2d8; margin: 5px 0 0 0; font-size: 14px;">MDiHub</p>
             </div>
           </div>
         </div>
@@ -3215,13 +3215,13 @@ window.addEventListener('scroll', () => {
         <div class="event-card" style="background: rgba(255,255,255,0.05); backdrop-filter: blur(10px); border-radius: 15px; padding: 20px; border: 1px solid rgba(255,255,255,0.1);">
           <div style="display: flex; gap: 15px;">
             <div style="background: #D4AF37; width: 60px; height: 60px; border-radius: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-              <span style="font-size: 20px; font-weight: bold; color: white;">22</span>
-              <span style="font-size: 12px; color: #b8c2d8;">JUN</span>
+              <span style="font-size: 20px; font-weight: bold; color: white;">7</span>
+              <span style="font-size: 12px; color: #b8c2d8;">NOV</span>
             </div>
             <div>
-              <h4 style="color: white; margin: 0 0 5px 0;">Tech Networking Event</h4>
-              <p style="color: #b8c2d8; margin: 0; font-size: 14px;">6:00 PM - 9:00 PM</p>
-              <p style="color: #b8c2d8; margin: 5px 0 0 0; font-size: 14px;">Main Conference Hall</p>
+              <h4 style="color: white; margin: 0 0 5px 0;">Founder's Circle Networking Event</h4>
+              <p style="color: #b8c2d8; margin: 0; font-size: 14px;">10:00 AM - 13:00 PM</p>
+              <p style="color: #b8c2d8; margin: 5px 0 0 0; font-size: 14px;">MDiHub Industrial Site Office</p>
             </div>
           </div>
         </div>
