--- a/NMM.html
+++ b/NMM.html
@@ -1112,13 +1112,10 @@ copyright {
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#">Events</a>
-          <ul class="dropdown-menu">
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="events.html">Events</a></li>
-          </ul>
+          <a href="gallery.html">Events</a>
+          
         </li>
-        <li><a href="media.html">Media</a></li>
+        <li><a href="blog.html">Media</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
