--- a/living-lab.html
+++ b/living-lab.html
@@ -624,13 +624,9 @@ footer * {
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#">Events</a>
-          <ul class="dropdown-menu">
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="events.html">Events</a></li>
-          </ul>
+          <a href="gallery.html">Events</a>
         </li>
-        <li><a href="media.html">Media</a></li>
+        <li><a href="blog.html">Media</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
@@ -1250,4 +1246,5 @@ window.addEventListener('scroll', () => {
         }
     </script>
 </body>
+
 </html>
