--- a/contact.html
+++ b/contact.html
@@ -876,7 +876,7 @@ window.addEventListener('scroll', () => {
   <h2>Contact Information</h2>
   <p><strong>Address:</strong> 2696 James Watt Cres, Mafikeng, Industrial Site</p>
   <p><strong>Email:</strong> info@mafihub.co.za</p>
-  <p><strong>Phone:</strong> +27 XX XXX XXXX</p>
+  <p><strong>Phone:</strong> +27 81 579 317</p>
   <p><strong>Hours:</strong> Monday - Friday: 8:00 AM - 16:30 PM</p>
 </div>
 
@@ -1056,4 +1056,5 @@ window.addEventListener('scroll', () => {
     });
   </script>
 </body>
+
 </html>
