--- a/team.html
+++ b/team.html
@@ -1307,7 +1307,7 @@ window.addEventListener('scroll', () => {
 
  
 <div class="leadership">
-  <img src="assets/img/ceo.webp" alt="Joseph Ndaba">
+  <img src="images/Joseph.jpg alt="Joseph Ndaba">
   <div class="leadership-details">
     <h5>Joseph Ndaba</h5>
     <div class="position">Chief Executive Officer</div>
@@ -1393,18 +1393,6 @@ window.addEventListener('scroll', () => {
       <div class="director-connector down"></div>
     </div>
 
-    <!-- First row: Living Lab PMO -->
-    <div class="team-branch" data-manager="thato-ndaba">
-      <div class="team-level">
-        <div class="team-card" style="background:none;">
-          <img src="images/Joseph.jpeg" alt="Mathabi" style="width:130px; height:130px; object-fit:cover;">
-          <h5>Joseph Makhura</h5>
-          <p>IT Support</p>
-          <a href="https://www.linkedin.com/in/joseph-makhura/" target="_blank" style="margin-left: 50px;">LinkedIn</a>
-        </div>
-      </div>
-    </div>
-
     <!-- Second row: VR Content Creation (no connectors between team members) -->
     <div class="team-branch" data-manager="thato-ndaba">
       <div class="team-level">
@@ -1468,13 +1456,13 @@ window.addEventListener('scroll', () => {
     <div class="team-branch">
       <div class="team-level">
         <div class="team-card" style="background:none;">
-          <img src="images/drone.jpg" alt="Morena Santho" style="width:130px; height:130px; object-fit:cover;">
+          <img src="images/Morena.jpg" alt="Morena Santho" style="width:130px; height:130px; object-fit:cover;">
           <h5>Morena Santho</h5>
           <p>Coding & Robotics</p>
           <a href="https://www.linkedin.com/in/morena-santho" target="_blank">LinkedIn</a>
         </div>
         <div class="team-card fixed-height" style="background:none;">
-          <img src="images/Teboho.jpg" alt="Kgothatso" style="width:130px; height:130px; object-fit:cover;">
+          <img src="images/Kgothatso.jpg" alt="Kgothatso" style="width:130px; height:130px; object-fit:cover;">
           <h5>Kgothatso Ramuhashi</h5>
           <p>Entry Level Developer</p>
           <a href="https://www.linkedin.com/in/kgothatso-ramuhashi" target="_blank">LinkedIn</a>
@@ -1686,4 +1674,5 @@ window.addEventListener('scroll', () => {
 });
 </script>
 </body>
+
 </html>
