--- a/index.html
+++ b/index.html
@@ -2562,7 +2562,7 @@ window.addEventListener('scroll', () => {
     <!-- About section merged below -->
     <div class="about-section" id="about-section">
       <div class="left-nav">
-        <a href="recruitment.html" class="circle-item">
+        <a href="business-incubation.html" class="circle-item">
           <span class="icon"><i class="fas fa-lightbulb"></i></span>
           <p>INCUBATION</p>
         </a>
