--- a/index.html
+++ b/index.html
@@ -2530,7 +2530,7 @@ window.addEventListener('scroll', () => {
   <div class="hero-container">
     <div class="video-container1">
       <video autoplay loop muted playsinline>
-        <source src="images/vid2.mp4" type="video/mp4" />
+        <source src="images/MDIHUB Mafikeng 4k.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
