--- a/about.html
+++ b/about.html
@@ -1636,7 +1636,7 @@ window.addEventListener('scroll', () => {
       
           <!-- Your video -->
           <video id="mainVideo" autoplay loop playsinline muted poster="...">
-            <source src="images/MDIHUB Mafikeng 4k.mp4" type="video/mp4" />
+            <source src="images/images/MDIHUB Mafikeng 4k.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
         </div>
@@ -2210,4 +2210,5 @@ window.addEventListener('scroll', () => {
         </script>
 </body>
 </html>
+
 
