--- a/index.html
+++ b/index.html
@@ -2548,7 +2548,7 @@ window.addEventListener('scroll', () => {
       <a href="programs.html" class="btn btn-primary">
         <i class="fas fa-bullhorn"></i> OPEN CALLS!
       </a>
-      <a href="#about-section" class="btn btn-primary1">
+      <a href="about.html" class="btn btn-primary1">
         <i class="fas fa-users"></i> Get to know us!
       </a>
     </div>
@@ -3133,7 +3133,7 @@ window.addEventListener('scroll', () => {
 <div style="flex: 2; min-width: 320px;">
 
   <!-- Title above the calendar -->
-  <<h2 style="font-size: 32px; font-weight: 700; color: #000; text-align: center; margin-bottom: 20px;">Our Calendar</h2>
+  <h2 style="font-size: 32px; font-weight: 700; color: #000; text-align: center; margin-bottom: 20px;">Our Calendar</h2>
 
 <!-- Enhanced Gallery Calendar Section -->
 <div class="events-section" style="margin-top: 30px; padding: 20px 25px; max-width: 1150px; margin-left: auto; margin-right: auto; background: linear-gradient(135deg, #000000 0%, #000000 100%); border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); position: relative; overflow: hidden;">
@@ -3500,7 +3500,7 @@ window.addEventListener('scroll', () => {
        `;
        document.head.appendChild(style);
      });
-   </script>
+  </script>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -3591,6 +3591,74 @@ window.addEventListener('scroll', () => {
   
     </script>
     
+
+  <!-- Global responsive overrides -->
+  <style>
+    /* Media defaults */
+    img, video, iframe { max-width: 100%; height: auto; }
+    .container, section { max-width: 100%; overflow-x: hidden; }
+
+    /* Header/nav improvements */
+    @media (max-width: 900px) {
+      .header-main { padding: 12px 16px; }
+      nav .nav-menu {
+        right: 12px;
+        left: 12px;
+        background: rgba(255,255,255,0.95) !important;
+        border: 1px solid rgba(0,0,0,0.06);
+        gap: 14px;
+      }
+      nav .nav-menu a { color: #000 !important; }
+      .hamburger span { background: #000; }
+    }
+
+    /* Hero layout and buttons - keep desktop positions on all devices */
+    @media (max-width: 1200px) {
+      .hero-content { margin-left: 180px !important; text-align: left !important; }
+    }
+    @media (max-width: 1024px) {
+      .hero-container { height: 100vh; padding: 0; }
+      .hero-title { right: 50px; }
+      .hero-buttons { justify-content: flex-start; }
+      .btn-primary { position: absolute; bottom: 50px; left: 100px; margin: 0; }
+      .btn-primary1 { position: absolute; bottom: 10px; left: 180px; margin: 0; }
+    }
+
+    /* Calendar iframe height responsive */
+    .events-section .calendar-container iframe { height: clamp(320px, 60vh, 680px) !important; }
+    @media (max-width: 600px) {
+      .events-section .calendar-container iframe { height: 65vh !important; }
+    }
+
+    /* Fix negative margins on small screens for tech section */
+    @media (max-width: 992px) {
+      .tech-innovation-section { margin-top: 0 !important; margin-bottom: 0 !important; padding: 40px 0 !important; }
+      .opportunity-cards { gap: 20px; }
+    }
+
+    /* Prevent overflow from absolutely-positioned cards on narrow screens */
+    @media (max-width: 1200px) {
+      .tech-card.card-1, .tech-card.card-2, .tech-card.card-3, .tech-card.card-4 {
+        left: auto !important; right: auto !important; top: auto !important; bottom: auto !important;
+      }
+    }
+
+    /* Hero video and robot - force uniform placement */
+    .hero-section { min-height: 100vh; }
+    .hero-container { height: 100vh; max-height: 960px; }
+    .video-container1 video { width: 100%; height: 100%; object-fit: cover; }
+    .hero-robot { position: absolute !important; right: 75% !important; bottom: 134px !important; height: 800px !important; display: block !important; }
+    @media (max-width: 1200px) {
+      .hero-content { padding: 40px 20px 20px; }
+    }
+    @media (max-width: 992px) {
+      .hero-container { height: 100vh; }
+    }
+    @media (max-width: 768px) {
+      .hero-container { height: 100vh; }
+      .hero-content { margin-left: 180px !important; text-align: left !important; }
+    }
+  </style>
 
 </body>
 </html>
