--- a/index.html
+++ b/index.html
@@ -3602,13 +3602,21 @@ window.addEventListener('scroll', () => {
     @media (max-width: 900px) {
       .header-main { padding: 12px 16px; }
       nav .nav-menu {
-        right: 12px;
-        left: 12px;
-        background: rgba(255,255,255,0.95) !important;
-        border: 1px solid rgba(0,0,0,0.06);
+        position: fixed !important;
+        top: 70px !important;
+        left: 12px !important;
+        right: 12px !important;
+        width: auto !important;
+        margin: 0 !important;
+        background: rgba(255,255,255,0.98) !important;
+        border: 1px solid rgba(0,0,0,0.06) !important;
+        border-radius: 10px;
+        box-shadow: 0 12px 30px rgba(0,0,0,0.15);
         gap: 14px;
+        z-index: 2000;
+        padding: 16px;
       }
-      nav .nav-menu a { color: #000 !important; }
+      nav .nav-menu a { color: #000 !important; transform: none !important; }
       .hamburger span { background: #000; }
     }
 
@@ -3647,16 +3655,36 @@ window.addEventListener('scroll', () => {
     .hero-section { min-height: 100vh; }
     .hero-container { height: 100vh; max-height: 960px; }
     .video-container1 video { width: 100%; height: 100%; object-fit: cover; }
-    .hero-robot { position: absolute !important; right: 75% !important; bottom: 134px !important; height: 800px !important; display: block !important; }
+    .hero-robot { position: absolute !important; right: 75% !important; bottom: 134px !important; height: clamp(220px, 32vw, 800px) !important; display: block !important; pointer-events: none !important; transform: translateY(0) !important; }
+    .hero-content { position: relative; z-index: 3000 !important; }
     @media (max-width: 1200px) {
       .hero-content { padding: 40px 20px 20px; }
     }
     @media (max-width: 992px) {
       .hero-container { height: 100vh; }
+      .hero-robot { right: 75% !important; bottom: 134px !important; }
     }
     @media (max-width: 768px) {
       .hero-container { height: 100vh; }
       .hero-content { margin-left: 180px !important; text-align: left !important; }
+      .hero-robot { right: 75% !important; bottom: 134px !important; }
+    }
+
+    /* Enforce desktop hero positions across breakpoints, allow sizes to scale */
+    @media (max-width: 1200px), (max-width: 992px), (max-width: 768px), (max-width: 480px) {
+      .hero-title { font-size: clamp(2rem, 8vw, 5.2rem) !important; letter-spacing: 3px !important; text-align: center !important; }
+      .hero-subtitle { font-size: clamp(14px, 2.5vw, 20px) !important; margin-top: 30px !important; margin-bottom: 120px !important; text-align: left !important; }
+      .hero-buttons { flex-direction: row !important; justify-content: flex-start !important; gap: 15px !important; }
+      .btn-primary { position: absolute !important; bottom: 50px !important; left: 100px !important; margin: 0 !important; padding: clamp(10px, 2.5vw, 16px) clamp(18px, 4vw, 36px) !important; font-size: clamp(12px, 2.2vw, 14px) !important; }
+      .btn-primary1 { position: absolute !important; bottom: 10px !important; left: 180px !important; margin: 0 !important; padding: clamp(10px, 2.5vw, 16px) clamp(18px, 4vw, 36px) !important; font-size: clamp(12px, 2.2vw, 14px) !important; }
+      .hero-content { margin-left: 180px !important; text-align: left !important; }
+      .hero-container { height: 100vh !important; }
+      .hero-robot { position: absolute !important; right: 75% !important; bottom: 134px !important; height: clamp(220px, 32vw, 800px) !important; display: block !important; }
+    }
+
+    /* Hard reset for desktop to original robot placement */
+    @media (min-width: 1200px) {
+      .hero-robot { right: 75% !important; bottom: 134px !important; height: 800px !important; }
     }
   </style>
 
